--- a/src/App.css
+++ b/src/App.css
@@ -25,5 +25,6 @@
     body {
         @apply bg-background text-foreground;
         font-family: san francisco;
+        font-size: 16px;
     }
 }
