--- a/src/App.css
+++ b/src/App.css
@@ -22,8 +22,8 @@
         --secondary: 210, 7%, 64%;
     }
     body {
-        @apply bg-background text-secondary/70 ;
+        @apply bg-background text-secondary/70 font-bold;
         font-family: "Roboto", sans-serif;
-        font-size: 15px;
+        font-size: 14px;
     }
 }
