--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 @import "tailwindcss";
 
 @font-face {
-    font-family: "Roboto";
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+        "Helvetica Neue", sans-serif;
     src: url("./assets/fonts/Roboto-Regular.ttf") format("truetype");
     font-weight: 400;
     font-style: normal;
