--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,16 @@
     --color-line: hsl(var(--line));
     --color-secondary: hsl(var(--secondary));
     --color-card: hsl(var(--card));
+    --color-1: hsl(var(--1));
+    --color-2: hsl(var(--2));
+    --color-3: hsl(var(--3));
+    --color-4: hsl(var(--4));
+    --color-5: hsl(var(--5));
+    --color-6: hsl(var(--6));
+    --color-7: hsl(var(--7));
+    --color-8: hsl(var(--8));
+    --color-9: hsl(var(--9));
+    --color-10: hsl(var(--10));
 }
 
 @layer base {
@@ -23,6 +33,16 @@
         --line: 217, 89%, 62%;
         --secondary: 210, 7%, 64%;
         --card: 0, 0%, 34%;
+        --1: 340, 82%, 59%;
+        --2: 16, 17%, 47%;
+        --3: 27, 100%, 47%;
+        --4: 92, 47%, 42%;
+        --5: 185, 100%, 33%;
+        --6: 291, 47%, 51%;
+        --7: 13, 25%, 29%;
+        --8: 201, 98%, 41%;
+        --9: 262, 47%, 55%;
+        --10: 14, 91%, 54%;
     }
     body {
         @apply bg-background text-secondary/70 font-bold;
